--- a/styles.css
+++ b/styles.css
@@ -189,8 +189,6 @@ nav ul li a.highlighted {
 .contact-info a:visited {
     color: #900C3F; /* Visited link color */
 }
-
-
 /* Social Media Section */
 .social-media {
     padding: 30px 20px;
@@ -198,41 +196,33 @@ nav ul li a.highlighted {
     text-align: center;
 }
 
+.social-media h2 {
+    font-size: 2rem;
+    color: #333;
+    margin-bottom: 20px;
+}
+
 .social-icons {
     display: flex;
     justify-content: center;
-    gap: 15px;
+    gap: 20px;
 }
 
-.social-icons .icon {
+.social-icons a {
+    display: inline-block;
     width: 40px;
     height: 40px;
-    background-size: cover;
-    background-position: center;
-    border-radius: 50%;
-    transition: transform 0.3s;
+    text-align: center;
 }
 
-.social-icons .icon:hover {
-    transform: scale(1.2);
+.social-icons img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%; /* Optional: Makes the icons circular */
+    transition: transform 0.3s; /* Adds a hover effect */
 }
 
-.instagram {
-    background-image: url('./icons/instagram.png');
-}
-
-.twitter {
-    background-image: url('./icons/twitter.png');
-}
-
-.facebook {
-    background-image: url('./icons/facebook.png');
-}
-
-.pinterest {
-    background-image: url('./icons/pinterest.png');
-}
-
-.youtube {
-    background-image: url('./icons/youtube.png');
+.social-icons img:hover {
+    transform: scale(1.1); /* Slightly enlarges the icon on hover */
 }
