--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ nav ul {
 }
 
 /* Navigation Link Styles */
+/* Navigation Link Styles */
 nav ul li a {
     text-decoration: none;
     color: #333;
@@ -44,6 +45,13 @@ nav ul li a {
 nav ul li a:hover {
     background-color: orange; /* Highlight color */
     color: white; /* Change text color on hover */
+}
+
+/* Always highlighted for Events */
+nav ul li a.highlighted {
+    background-color: orange; /* Highlight color for Events */
+    color: white; /* Text color for highlighted Events link */
+    border-radius: 5px;
 }
 
 
