--- a/donate.css
+++ b/donate.css
@@ -26,7 +26,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url("donate.jpg") center center/cover no-repeat;
+    background: url("donationbackground.jpg") center center/cover no-repeat;
     filter: blur(0.9px);
     z-index: 1;
 }
