--- a/elderly.css
+++ b/elderly.css
@@ -24,7 +24,7 @@ body {
 h1 {
     margin: 0;
     font-size: 2em;
-    color: #333;
+    color: #f9f6f6;
 }
 
 .container {
@@ -106,9 +106,6 @@ h1 {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     margin-right: 30px; /* Space after the image */
 }
-
-
-
 
 /* Dotted vertical line beside the image */
 .project-content::before {
